# KeyboardTrainer

./: .gitignore  CMakeLists.txt  DialogBase.cpp  DialogBase.h  InfoDialog.cpp  InfoDialog.h  TextInput.cpp  TextInput.h  button.cpp  button.h  constants.h  date.h  drawfuncs.cpp  drawfuncs.h  engine.cpp  engine.h  loadlyricsdialog.cpp  loadlyricsdialog.h  main.cpp  parser.cpp  parser.h  plotwidget.cpp  plotwidget.h  radiobutton.cpp  radiobutton.h  requestsongdialog.cpp  requestsongdialog.h  wordinput.cpp  wordinput.h
